# ChemPrice

./: .readthedocs.yaml  LICENSE  README.md  README.rst  price.csv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml  tests.yml
chemicalprices/: chemicalprices.py  requirements.txt  test.py  utils.py
chemprice/: __init__.py
chemprice/tests/: requirements.txt
chemprice/tests/data/: chemspace_prices_test.csv  molport_prices_test.csv  smiles_list.csv
chemprice/tests/test/: collect_test.py  data_operation_test.py  library_test.py
code/: chemicalprices.py
docs/: api.rst  conf.py  index.rst  make.bat  requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/api2/: api.rst
docs/source/api_reference/: api.rst
docs/source/user_manual/: development.rst  getting_started.rst  installation.rst
docs/user_manual/: development.rst  getting_started.rst  installation.rst
interface/: chemicalprices.py  main.py  requirements.txt
notebook/: vendor-search.ipynb
test/: Utils.py  requirements.txt  test_first.py
test/data/: merged_prices_test.csv
test/test/: collect_test.py  data_operation_test.py  library_test.py
tests/data/: best_prices.csv  test_data.csv
tests/test/: collect_test.py  data_operation_test.py  library_test.py
